# crete-dev

./: .dockerignore  CLAUDE.md  CRETE_FIXES.md  Dockerfile
back-end/: CMakeLists.txt
front-end/: CMakeLists.txt
front-end/qemu-2.3/runtime-dump/: crete-debug.cpp  custom-instructions.cpp  runtime-dump.cpp  tci_analyzer.cpp
lib/boost/: CMakeLists.txt  fix-boost-build-gcc15.sh
lib/include/crete/: common.h
